; ModuleID = '/home/carl/AnghaBench/php-src/ext/ldap/extr_ldap.c__php_ldap_controls_free.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ldap/extr_ldap.c__php_ldap_controls_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32***)* @_php_ldap_controls_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_php_ldap_controls_free(i32*** %0) #0 {
  %2 = alloca i32***, align 8
  %3 = alloca i32**, align 8
  store i32*** %0, i32**** %2, align 8
  %4 = load i32***, i32**** %2, align 8
  %5 = load i32**, i32*** %4, align 8
  %6 = icmp ne i32** %5, null
  br i1 %6, label %7, label %25

7:                                                ; preds = %1
  %8 = load i32***, i32**** %2, align 8
  %9 = load i32**, i32*** %8, align 8
  store i32** %9, i32*** %3, align 8
  br label %10

10:                                               ; preds = %14, %7
  %11 = load i32**, i32*** %3, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %10
  %15 = load i32**, i32*** %3, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @ldap_control_free(i32* %16)
  %18 = load i32**, i32*** %3, align 8
  %19 = getelementptr inbounds i32*, i32** %18, i32 1
  store i32** %19, i32*** %3, align 8
  br label %10

20:                                               ; preds = %10
  %21 = load i32***, i32**** %2, align 8
  %22 = load i32**, i32*** %21, align 8
  %23 = call i32 @efree(i32** %22)
  %24 = load i32***, i32**** %2, align 8
  store i32** null, i32*** %24, align 8
  br label %25

25:                                               ; preds = %20, %1
  ret void
}

declare dso_local i32 @ldap_control_free(i32*) #1

declare dso_local i32 @efree(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
